Fix contrast ratio issues. Closes #1229

--- a/sites/all/themes/pul_base/assets/source/styles/components/search/_search--quicktabs.scss
+++ b/sites/all/themes/pul_base/assets/source/styles/components/search/_search--quicktabs.scss
@@ -128,7 +128,7 @@
   }
 
   .quicktabs_main button {
-    background: $orange;
+    background: shade($orange, 20%);
     border: 1px solid $gray-dark;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 4px;
